# university-

./: .gitignore  10res.c  12lab.c  CMakeLists.txt  CONTRIBUTING.md  README.md  main.c  test_file_work.c  tests_streams.c  work.c  work_with_files.c  work_with_streams.c
algorithms/array/: array.h
data_structures/: CMakeLists.txt
data_structures/matrix/: matrix.c  matrix.h
data_structures/unorderedset/: unorderedset.c
data_structures/vector/: vector.c  vector.h  vector_tests.c  vector_void.c  vector_void.h
libs/: CMakeLists.txt
libs/algorithms/: CMakeLists.txt
libs/algorithms/array/: array.c  array.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/orderedset/: orderedset.c  orderedset.h
libs/data_structures/unorderedset/: unorderedset.c  unorderedset.h
libs/data_structures/vector/: vector.c  vector.h  vector_void.c
libs/string_/string_/: string_.c  string_.h
libs/tests/: string_tests.c  using_matrix.c  using_string_.c  vector_tests.c
string_/: CMakeLists.txt
string_/string_/: string_.c
tests/: matrix_tests.c  string_tests.c  using_matrix.c  using_matrix_tests.c  vector_tests.c
